[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wolf"
version = "0.1"
authors = [
    {name = "Souheil Chelfouh", email = "trollfot@gmail.com"},
]
requires-python = ">=3.11"
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
  "annotated-types",
  "autoroutes",
  "autorouting",
  "beartype",
  "chameleon",
  "frozendict",
  "http_session",
  "itsdangerous",
  "jsonschema_rs",
  "kettu",
  "orderedsets",
  "orjson",
  "plum-dispatch",
  "pyhamcrest",
  "rich",
  "signature_registries",
  "sqlmodel",
  "structlog",
  "svcs",
  "vernacular",
  "wrapt",

  # following the soon-to-be excised from the package
  "deform",
  "colander",
  "pyjwt",
]

[project.optional-dependencies]
test = [
    'pytest',
    'webtest'
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["wolf"]
namespaces = false
