[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wolf"
version = "0.1"
authors = [
    {name = "Souheil Chelfouh", email = "trollfot@gmail.com"},
]
requires-python = ">=3.11"
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
  "authsources",
  "annotated-types",
  "autoroutes",
  "autorouting",
  "beartype",
  "chameleon",
  "frozendict",
  "http_session",
  "itsdangerous",
  "jsonschema_rs",
  "kettu >= 0.2",
  "orderedsets",
  "orjson",
  "plum-dispatch",
  "pyhamcrest",
  "signature_registries",
  "structlog",
  "svcs",
  "vernacular",
  "wrapt",
  "fct_annotate",

  # following the soon-to-be excised from the package
  "deform",
  "colander",
]

[project.optional-dependencies]
test = [
    'pytest',
    'webtest'
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["wolf"]
namespaces = false
